--- a/src/components/Sidebar/SideTab/SideTab.module.css
+++ b/src/components/Sidebar/SideTab/SideTab.module.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Montserrat';
+  src: local('Montserrat'), url("../../../fonts/Montserrat-VariableFont_wght.ttf") format('truetype');
+}
+
 .slide_bar__tab {
   display: flex;
   align-items: center;
