--- a/src/components/Header/MenuBarButton/HeaderButton.module.css
+++ b/src/components/Header/MenuBarButton/HeaderButton.module.css
@@ -1,7 +1,10 @@
+@font-face {
+  font-family: 'Montserrat';
+  src: local('Montserrat'), url("../../../fonts/Montserrat-VariableFont_wght.ttf") format('truetype');
+}
+
 .menu_bar__button {
-  font:
-    400 18px/20px "Montserrat",
-    sans-serif;
+  font: 400 18px/20px "Montserrat", sans-serif;
   border-style: none;
   padding: 0 12px;
   cursor: pointer;
@@ -11,7 +14,6 @@
 
 .menu_bar__button:hover {
   background-color: #f6f6f6;
-  width: fit-content;
   height: 40px;
   border-radius: 4px;
   transition: 0.05s ease;
@@ -29,9 +31,7 @@
   background-color: #ffc322;
   border: none;
   cursor: pointer;
-  font:
-    200 0.875rem "inherit",
-    sans-serif;
+  font: 200 0.875rem "inherit",sans-serif;
 }
 
 .menu_bar_button__dowload:hover {
@@ -39,28 +39,8 @@
   transition: 0.2s ease;
 }
 
-.menu_open_button {
-  cursor: pointer;
-  text-align: left;
-  font:
-    400 18px/20px "Montserrat",
-    sans-serif;
-  border-style: none;
-  background-color: #ffffff;
-  padding: 7px 0;
-  width: 100%;
-  padding: 7px 0 7px 15px;
-  border-radius: 4px;
-}
-
-.menu_open_button:hover {
-  background: rgba(221, 224, 229, 0.5);
-}
-
 .menu_size_save {
-  font:
-    400 18px/20px "Montserrat",
-    sans-serif;
+  font: 400 18px/20px "Montserrat",sans-serif;
   margin: 0 15px 15px 15px;
   padding: 12px;
   border-style: none;
