--- a/src/components/Header/HeaderLogo/HeaderLogo.module.css
+++ b/src/components/Header/HeaderLogo/HeaderLogo.module.css
@@ -1,7 +1,5 @@
 .header__logo {
-  font:
-    400 34px/43px "Crete Round",
-    serif;
+  font: 400 34px/43px "Crete Round", serif;
   color: #ffc322;
   text-decoration: none;
 }
