--- a/src/components/Main/Canvas/Image.module.css
+++ b/src/components/Main/Canvas/Image.module.css
@@ -1,4 +1,10 @@
-.img {
-  position: absolute;
-  cursor: pointer;
+.image{
+    width: 100%;
+    height: 100%;
+}
+
+.container{
+    width: 100%;
+    height: 100%;
+    position: static;
 }
