--- a/src/components/Main/Canvas/TextView.module.css
+++ b/src/components/Main/Canvas/TextView.module.css
@@ -1,9 +1,16 @@
 .textarea{
-    display: block;
-    position: relative;
-    border: none;
     background: none;
     outline: none;
-    resize: none;
     overflow: hidden; 
+    position: absolute;
+    border: none;
+    width: 100%;
+    height: 100%;
+    resize: none;
+}
+
+.container{
+    width: 100%;
+    height: 100%;
+    position: static;
 }
