--- a/src/components/Sidebar/SlideTabPanel/PanelArtObject.module.css
+++ b/src/components/Sidebar/SlideTabPanel/PanelArtObject.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 100%;
     height: 100%;
 }
