--- a/src/components/Sidebar/SlideTabPanel/SlidePanel.module.css
+++ b/src/components/Sidebar/SlideTabPanel/SlidePanel.module.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    width: 175px;
+    width: 198px;
     height: 734px;
     background-color: #1b1b1d;
     top: 56px;
     left: 68px;
-    padding: 10px 15px;
+    padding: 10px 5px 10px 15px;
     border-radius: 0 15px 15px 0;
 }
 
@@ -22,7 +22,7 @@
     width: 22px;
     height: 81px;
     top: 280px;
-    left: 200px;
+    left: 212px;
     background-color: #1b1b1d;
     transform: perspective(35px) rotateY(45deg);
     cursor: pointer;
