--- a/src/components/Main/ToolBar/ToolBarButtonArrow.module.css
+++ b/src/components/Main/ToolBar/ToolBarButtonArrow.module.css
@@ -5,6 +5,7 @@
   height: 24px;
   margin: 0 10px;
   cursor: pointer;
+  padding: 5px;
 }
 
 .tool_bar__right {
@@ -13,4 +14,15 @@
   width: 24px;
   height: 24px;
   cursor: pointer;
+  padding: 5px;
+}
+
+.tool_bar__left:hover{
+  background-color: #f6f6f6;
+  border-radius: 4px;
+}
+
+.tool_bar__right:hover{
+  background-color: #f6f6f6;
+  border-radius: 4px;
 }
