--- a/src/components/Main/ToolBar/ObjectSettings/TextSettings/TextSettings.module.css
+++ b/src/components/Main/ToolBar/ObjectSettings/TextSettings/TextSettings.module.css
@@ -25,6 +25,24 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    width: 146px;
+    width: 110px;
 }
 
+.dropdown_content {
+    position: absolute;
+    display: none;
+    width: 180px; 
+    align-items: center;
+    background: #FFFFFF;
+    border: 1px solid #DDE0E5;
+    box-sizing: border-box;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
+    border-radius: 6px;
+    overflow-y: auto; 
+    height: 120px;
+    z-index: 1;
+}
+
+.show {
+    display: block;
+}
