--- a/src/components/Sidebar/SideBar.module.css
+++ b/src/components/Sidebar/SideBar.module.css
@@ -4,6 +4,6 @@
   background-color: #1b1b1d;
   box-sizing: border-box;
   padding: 3px 3px 0;
-  width: 72px;
+  min-width: 66px;
   min-height: 754px;
 }
