--- a/src/components/Sidebar/SlideTabPanel/PanelTemplate.module.css
+++ b/src/components/Sidebar/SlideTabPanel/PanelTemplate.module.css
@@ -8,6 +8,20 @@
     overflow: scroll;
 }
 
+::-webkit-scrollbar {
+    height: 12px;
+    width: 12px;
+    background: #000;
+}
+::-webkit-scrollbar-thumb {
+    background: #bbbbbb;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+::-webkit-scrollbar-corner {
+    background: #000;
+}
+
 .text {
     font: 400 16px/18px "Montserrat", sans-serif;
     color: #878787;
